--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -44,6 +44,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PROFILE"/>
 
 
     <application android:icon="@drawable/icon" android:label="@string/app_name"
@@ -59,5 +61,5 @@
         </activity>
     </application>
 
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="17"/>
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
 </manifest> 
